--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -25,7 +25,7 @@
       }
 
       document.addEventListener('deviceready', function () {
-        window.plugins.insomnia.keepAwake();
+        //window.plugins.insomnia.keepAwake();
 
         admob.banner.config({ 
           id: admobid.banner, 
