--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="lib/onsen/js/onsenui.js"></script>
-    <!-- <script type="text/javascript" src="lib/SocialSharing/SocialSharing.js"></script>-->
+    <script type="text/javascript" src="lib/SocialSharing/SocialSharing.js"></script>
     <script>
       var admobid = {}
       if (/(android)/i.test(navigator.userAgent)) {  // for android & amazon-fireos
