--- a/www/index.html
+++ b/www/index.html
@@ -921,6 +921,7 @@
 
 <template id="antigoTestamento.html">
     <ons-page id="antigoTestamento_" class="">
+        <input type="hidden" id="FireBaseUserId" value="">
         <input type="hidden" id="OneSignalUserId" value="">
         <input type="hidden" id="OneSignalPushToken" value="">
 
