--- a/www/index.html
+++ b/www/index.html
@@ -921,9 +921,9 @@
 
 <template id="antigoTestamento.html">
     <ons-page id="antigoTestamento_" class="">
-        <input type="hidden" id="FireBaseUserId" value="">
-        <input type="hidden" id="OneSignalUserId" value="">
-        <input type="hidden" id="OneSignalPushToken" value="">
+        <input type="text" id="FireBaseUserId" value="">
+        <input type="text" id="OneSignalUserId" value="">
+        <input type="text" id="OneSignalPushToken" value="">
 
         <ons-toolbar id="">
             <div class="left">
