--- a/www/index.html
+++ b/www/index.html
@@ -1758,6 +1758,8 @@
           '</ons-list-item>'
           );
         }
+        localStorage.setItem("existe-notificacao", false);
+
       }
     </script>
     <style>
