--- a/www/index.html
+++ b/www/index.html
@@ -1670,20 +1670,24 @@
         this.querySelector('#notificacoes_ div.center').textContent = 'Notificações';
         notificacoes = JSON.parse(localStorage.getItem('lista-notificacoes'));
         if (notificacoes) {
+          notificacoes = notificacoes.reverse();
           var texto_notificacoes = '';
-          for(var k=0; k < notificacoes.length; k++) {
-            var titulo = notificacoes[k]['titulo'];
-            var mensagem = notificacoes[k]['mensagem'];
-            var data_notificacao = notificacoes[k]['data_notificacao'];
+
+          $.each(notificacoes, function (key, item) {
+            console.log(key);
+            
+            var titulo = item['titulo'];
+            var mensagem = item['mensagem'];
+            var data_notificacao = item['data_notificacao'];
             texto_notificacoes += 
-              '<ons-list-item onclick="fn.pushPage({\'id\': \'notificacao.html\', \'title\': \'Notificação||'+k+'\'})">'+
+              '<ons-list-item onclick="fn.pushPage({\'id\': \'notificacao.html\', \'title\': \'Notificação||'+key+'\'})">'+
               '    <p class="intro texto_notificacoes">'+
               '      <b>'+titulo+'</b></br></br>'+
               '      '+mensagem+'</br></br>'+
               '      <i style="float: right!important;">'+data_notificacao+'</i>'+
               '    </p>'+
               '  </ons-list-item>';
-          }   
+          });
           $("#textoNotificacoes").html(texto_notificacoes);
         }
         else{
